@@ -3,13 +3,16 @@
     <parent>
         <artifactId>broadleaf</artifactId>
         <groupId>org.broadleafcommerce</groupId>
-        <version>2.2.0-GA</version>
+        <version>3.1.8-GA</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>integration</artifactId>
     <name>BroadleafCommerce Integration</name>
     <description>BroadleafCommerce Integration</description>
     <url>http://www.broadleafcommerce.org</url>
+    <properties>
+        <project.uri>${project.baseUri}/../</project.uri>
+    </properties>
     <licenses>
         <license>
             <name>Apache 2</name>
@@ -62,33 +65,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Xmx512m</argLine>
-                </configuration>
                 <executions>
                     <execution>
                         <id>default-test</id>
                         <configuration>
                             <skipTests>true</skipTests>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>legacy-test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <excludes>
-                                <exclude>**/OrderTest.java</exclude>
-                                <exclude>**/CartTest.java</exclude>
-                                <exclude>**/CheckoutTest.java</exclude>
-                                <exclude>**/FulfillmentGroupDaoTest.java</exclude>
-                                <exclude>**/OfferServiceTest.java</exclude>
-                                <exclude>**/OfferTest.java</exclude>
-                                <exclude>**/PricingTest.java</exclude>
-                            </excludes>
-                            <argLine>-Dlegacy=true</argLine>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=512m -Dlegacy=true</argLine>
                         </configuration>
                     </execution>
                     <execution>
@@ -101,6 +83,7 @@
                             <excludes>
                                 <exclude>**/Legacy**Test.java</exclude>
                             </excludes>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                         </configuration>
                     </execution>
                 </executions>
@@ -125,6 +108,38 @@
         </plugins>
     </build>
     <profiles>
+        <profile>
+            <!-- Skip legacy tests by default, activated with the Maven 'legacy-test' profile -->
+            <id>legacy-test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>legacy-test</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <excludes>
+                                        <exclude>**/OrderTest.java</exclude>
+                                        <exclude>**/CartTest.java</exclude>
+                                        <exclude>**/CheckoutTest.java</exclude>
+                                        <exclude>**/FulfillmentGroupDaoTest.java</exclude>
+                                        <exclude>**/OfferServiceTest.java</exclude>
+                                        <exclude>**/OfferTest.java</exclude>
+                                        <exclude>**/PricingTest.java</exclude>
+                                    </excludes>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>blc-development</id>
             <build>
@@ -168,7 +183,7 @@
                                 <configuration>
                                     <argLine>
                                         -Dlegacy=true 
-                                        -Xmx512m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083 
+                                        -Xmx1024m -XX:MaxPermSize=512m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083 
                                         -javaagent:${jrebel.path} -Drebel.log.stdout=true
                                     </argLine>
                                 </configuration>
@@ -177,7 +192,7 @@
                                 <id>non-legacy-test</id>
                                 <configuration>
                                     <argLine>
-                                        -Xmx512m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083 
+                                        -Xmx1024m -XX:MaxPermSize=512m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083 
                                         -javaagent:${jrebel.path} -Drebel.log.stdout=true
                                     </argLine>
                                 </configuration>
